--- a/conFusion/src/app/app.component.html
+++ b/conFusion/src/app/app.component.html
@@ -1,3 +1,4 @@
-<mat-toolbar color="primary" >
+<mat-toolbar color="primary">
   <span>Restaurant Con Fusion</span>
 </mat-toolbar>
+<app-menu></app-menu>
