--- a/conFusion/src/styles.scss
+++ b/conFusion/src/styles.scss
@@ -1,4 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+ /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 
 body{
@@ -6,3 +6,8 @@ body{
   margin: 0;
   font-family: Roboto, sans-serif;
 }
+
+ .container {
+   margin: 20px;
+   display: flex;
+ }
