--- a/conFusion/src/app/menu/menu.component.html
+++ b/conFusion/src/app/menu/menu.component.html
@@ -19,23 +19,7 @@
       </mat-grid-tile>
     </mat-grid-list>
   </div>
+  <app-dish-details></app-dish-details>
 
-  <div fxFlex *ngIf="selectedDish">
-    <mat-card>
-      <mat-card-header>
-        <mat-card-title>
-          <h3>{{selectedDish.name | uppercase}}</h3>
-        </mat-card-title>
-      </mat-card-header>
-      <img mat-card-image src="{{selectedDish.image}}" alt="{{selectedDish.name}}">
-      <mat-card-content>
-        <p>{{selectedDish.description}}</p>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-button>LIKE</button>
-        <button mat-button>SAVE</button>
-      </mat-card-actions>
-    </mat-card>
-  </div>
 
 </div>
