--- a/conFusion/src/app/dish-details/dish-details.component.html
+++ b/conFusion/src/app/dish-details/dish-details.component.html
@@ -4,10 +4,10 @@
      fxLayout.xs="column"
      fxLayoutAlign.gt-md="space-around center"
      fxLayoutGap="10px"
-     fxLayoutGap.xs="0">
+     fxLayoutGap.xs="0" *ngIf="dish">
 
   <div fxFlex="40">
-    <div fxFlex *ngIf="dish">
+    <div fxFlex>
       <mat-card>
         <mat-card-header>
           <mat-card-title>
