--- a/conFusion/src/app/app.component.html
+++ b/conFusion/src/app/app.component.html
@@ -1,4 +1,3 @@
-<mat-toolbar color="primary">
-  <span>Restaurant Con Fusion</span>
-</mat-toolbar>
+<app-header></app-header>
 <app-menu></app-menu>
+<app-foorter></app-foorter>
